--- a/.github/workflows/auto-deploy-action.yml
+++ b/.github/workflows/auto-deploy-action.yml
@@ -21,9 +21,6 @@ jobs:
           script: | # run with multiple script
             cd /home/
             git clone git@github.com:thanhtran6916/auto-deploy-project-with-action.git
-            cd demo-auto-deploy
-            git pull
-            printf "${{ secrets.ENV }}" > .env.production
-            yarn
-            yarn build
-            pm2 start app-pm2.json
+            cd auto-deploy-project-with-action
+            mvn clean install
+            java -jar .\target\demo-auto-deploy-with-action-0.0.1-SNAPSHOT.jar
