--- a/.github/workflows/auto-deploy-action.yml
+++ b/.github/workflows/auto-deploy-action.yml
@@ -22,5 +22,5 @@ jobs:
             cd work/
             git pull https://github.com/thanhtran6916/auto-deploy-project-with-action.git
             cd auto-deploy-project-with-action
-            mvn install
+            mvn clean install
             java -jar *.jar
