--- a/.github/workflows/auto-deploy-action.yml
+++ b/.github/workflows/auto-deploy-action.yml
@@ -23,4 +23,4 @@ jobs:
             git pull https://github.com/thanhtran6916/auto-deploy-project-with-action.git
             cd auto-deploy-project-with-action
             mvn clean install
-            java -jar target/*.jar
+          run: java -jar target/*.jar
