--- a/.github/workflows/auto-deploy-action.yml
+++ b/.github/workflows/auto-deploy-action.yml
@@ -21,5 +21,6 @@ jobs:
           script: | # run with multiple script
             cd work/
             cd auto-deploy-project-with-action/
-            docker build -t auto-deploy .
+            git pull origin master
+            sudo docker build -t auto-deploy .
           run: docker run -p 443:8080 auto-deploy
