--- a/.github/workflows/auto-deploy-action.yml
+++ b/.github/workflows/auto-deploy-action.yml
@@ -11,16 +11,14 @@ jobs:
     name: Deploy
     runs-on: ubuntu-latest
     steps:
-      - name: executing remote ssh commands using password
-        uses: appleboy/ssh-action@master
+      - name: build
+        uses: actions/maven-build
         with:
           host: ${{ secrets.HOST }} #hostname of server
           username: ${{ secrets.USERNAME }} #username login to server
           password: ${{ secrets.PASSWORD }} #password login to server
           port: ${{ secrets.PORT }} #port of server - often port is 22
-          use_existing_version_if_available: false
-          application_name: autocluck
-          environment_name: Autocluck-env
-          version_label: ${{github.SHA}}
-          region: us-east-1
-          deployment_package: demo-auto-deploy-with-action-0.0.1-SNAPSHOT.jar
+          script: |
+            cd work/auto-deploy-project-with-action/
+            git pull origin master
+          run: mvn clean install
