--- a/.github/workflows/auto-deploy-action.yml
+++ b/.github/workflows/auto-deploy-action.yml
@@ -11,16 +11,21 @@ jobs:
     name: Deploy
     runs-on: ubuntu-latest
     steps:
-      - name: build
-        uses: appleboy/ssh-action@master
+      - uses: actions/checkout@v3
+      - name: Set up JDK 11
+        uses: actions/setup-java@v3
         with:
-          host: ${{ secrets.HOST }} #hostname of server
-          username: ${{ secrets.USERNAME }} #username login to server
-          password: ${{ secrets.PASSWORD }} #password login to server
-          port: ${{ secrets.PORT }} #port of server - often port is 22
-          script: | # run with multiple script
-            cd work/auto-deploy-project-with-action/
-            git pull origin master
-      - name: build maven
-        use: LucaFeger/action-maven-cli@1.1.0
-        run: mvn clean install
+          java-version: '11'
+          distribution: 'adopt'
+      - name: Build with Maven
+        run: mvn --batch-mode --update-snapshots package
+#      - name: build
+#        uses: appleboy/ssh-action@master
+#        with:
+#          host: ${{ secrets.HOST }} #hostname of server
+#          username: ${{ secrets.USERNAME }} #username login to server
+#          password: ${{ secrets.PASSWORD }} #password login to server
+#          port: ${{ secrets.PORT }} #port of server - often port is 22
+#          script: | # run with multiple script
+#            cd work/auto-deploy-project-with-action/
+#            git pull origin master
