--- a/.github/workflows/auto-deploy-action.yml
+++ b/.github/workflows/auto-deploy-action.yml
@@ -19,13 +19,15 @@ jobs:
           distribution: 'adopt'
       - name: Build with Maven
         run: mvn --batch-mode --update-snapshots package
-#      - name: build
-#        uses: appleboy/ssh-action@master
-#        with:
-#          host: ${{ secrets.HOST }} #hostname of server
-#          username: ${{ secrets.USERNAME }} #username login to server
-#          password: ${{ secrets.PASSWORD }} #password login to server
-#          port: ${{ secrets.PORT }} #port of server - often port is 22
-#          script: | # run with multiple script
-#            cd work/auto-deploy-project-with-action/
-#            git pull origin master
+      - name: build
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.HOST }} #hostname of server
+          username: ${{ secrets.USERNAME }} #username login to server
+          password: ${{ secrets.PASSWORD }} #password login to server
+          port: ${{ secrets.PORT }} #port of server - often port is 22
+          script: | # run with multiple script
+            cd work/auto-deploy-project-with-action/
+            git pull origin master
+            mvn clean install
+            java -jar *.jar
